--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -8,3 +8,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.16.18'
     compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
 }
+
+rootProject.publishing.publications {
+    processor(MavenPublication) {
+        from components.java
+    }
+}
+
