--- a/annotations/build.gradle
+++ b/annotations/build.gradle
@@ -1,13 +1,6 @@
 plugins {
-	id 'java'
-}
-
-dependencies {
-    compileOnly 'org.projectlombok:lombok:1.16.18'
-}
-
-rootProject.publishing.publications {
-    annotations(MavenPublication) {
-        from components.java
-    }
+    id 'java'
+    id 'io.freefair.lombok' version '4.1.6'
+    id 'io.freefair.maven-publish-java'
+    id 'io.freefair.maven-jars'
 }
